--- a/index.html
+++ b/index.html
@@ -63,13 +63,8 @@
         <div class="col position-absolute top-50 start-50 translate-middle">
           <p class="mb-2 fw-medium fs-3 text-primary">I'm</p>
           <p class="mb-2 fw-bold fs-custom-1 text-white">Resya Anggara</p>
-          <p class="mb-4 fw-normal fs-2 text-white mr-dis">
-            Web Development
-          </p>
-          <a
-            class="btn btn-primary fw-medium"
-            href="https://onepiece.fandom.com/wiki/Roronoa_Zoro"
-            role="button"
+          <p class="mb-4 fw-normal fs-2 text-white mr-dis">Web Development</p>
+          <a class="btn btn-primary fw-medium" href="#" role="button"
             >My Profil</a
           >
         </div>
@@ -93,9 +88,7 @@
               <h1 class="display-1 mb-0 fw-bold">18</h1>
               <h5 class="mb-0 years">Years</h5>
             </div>
-            <h3 class="lh-base mb-0">
-              Never Give Up
-            </h3>
+            <h3 class="lh-base mb-0">Never Give Up</h3>
           </div>
           <p class="mb-4 text-white">
             Ketika dunia jahat kepadamu, maka berusahalah untuk menghadapinya,
@@ -119,18 +112,10 @@
         <div class="col-lg-6 text-white">
           <div class="row g-3 mb-4">
             <div class="col-sm-6">
-              <img
-                class="img-fluid rounded"
-                src="images/ayaka.gif"
-                alt=""
-              />
+              <img class="img-fluid rounded" src="images/ayaka.gif" alt="" />
             </div>
             <div class="col-sm-6">
-              <img
-                class="img-fluid rounded"
-                src="images/ayaka2.gif"
-                alt=""
-              />
+              <img class="img-fluid rounded" src="images/ayaka2.gif" alt="" />
             </div>
           </div>
           <div class="d-flex align-items-center mb-3">
@@ -138,16 +123,17 @@
             <h2 class="text-primary fw-bold mb-0">Coding</h2>
           </div>
           <p class="mb-4">
-            Menurut saya cara yang ampuh untuk belajar coding/bisa coding adalah 
-            sering-sering membuat projek. Projek kecil-kecilan juga gak papa asalkan mau mencoba dan terus mencoba.
+            Menurut saya cara yang ampuh untuk belajar coding/bisa coding adalah
+            sering-sering membuat projek. Projek kecil-kecilan juga gak papa
+            asalkan mau mencoba dan terus mencoba.
           </p>
           <div class="d-flex align-items-center mb-3">
             <h5 class="border-end pe-3 me-3 mb-0">Cara Belajar</h5>
             <h2 class="text-primary fw-bold mb-0">UI dan UX</h2>
           </div>
           <p class="mb-0">
-            menurut penelitian saya cara yang paling ampuh adalah membuat projek desain kecil kecilan 
-            juga yang penting jangan gampang menyerah.
+            menurut penelitian saya cara yang paling ampuh adalah membuat projek
+            desain kecil kecilan juga yang penting jangan gampang menyerah.
           </p>
         </div>
       </div>
@@ -159,9 +145,7 @@
         <div class="row g-5">
           <div class="col-lg-6">
             <h1 class="display-5">Skills & Experience</h1>
-            <p class="mb-4">
-              My Skill in Informatika
-            </p>
+            <p class="mb-4">My Skill in Informatika</p>
             <h3 class="mb-4">My Skills</h3>
             <div class="row align-items-center">
               <div class="col-md-6">
@@ -220,7 +204,7 @@
                   <div class="progress">
                     <div
                       class="progress-bar"
-                      style="background-color: rgba(35, 35, 189, 0.897);"
+                      style="background-color: rgba(35, 35, 189, 0.897)"
                       role="progressbar"
                       aria-valuenow="15"
                       aria-valuemin="0"
@@ -236,7 +220,7 @@
                   <div class="progress">
                     <div
                       class="progress-bar"
-                      style="background-color: blueviolet;"
+                      style="background-color: blueviolet"
                       role="progressbar"
                       aria-valuenow="90"
                       aria-valuemin="0"
@@ -289,37 +273,29 @@
               <div id="tab-1" class="tab-pane fade show p-0 active bg-clear">
                 <div class="row gy-5 gx-4">
                   <div class="col-sm-6">
-                    <h5>East Blue</h5>
+                    <h5>Pertama</h5>
                     <hr class="text-danger my-2" />
-                    <p class="text-danger mb-1">2000 - 2001</p>
-                    <h6 class="mb-0">
-                      Zoro mengasah gaya Santoryu dan kesetiaannya kepada Luffy.
-                    </h6>
+                    <p class="text-danger mb-1">2020</p>
+                    <h6 class="mb-0">saya masih nyoba-nyoba</h6>
                   </div>
                   <div class="col-sm-6">
-                    <h5>Arabasta</h5>
+                    <h5>Kedua</h5>
                     <hr class="text-danger my-2" />
-                    <p class="text-danger mb-1">2001 - 2002</p>
-                    <h6 class="mb-0">
-                      Zoro melawan Baroque Works mengasah Haki dan semangat
-                      bertarungnya
-                    </h6>
+                    <p class="text-danger mb-1">2021</p>
+                    <h6 class="mb-0">saya sudah mulai malas</h6>
                   </div>
                   <div class="col-sm-6">
-                    <h5>Thriller Bark</h5>
+                    <h5>Ketiga</h5>
                     <hr class="text-danger my-2" />
-                    <p class="text-danger mb-1">2002 - 2004</p>
-                    <h6 class="mb-0">
-                      Zoro menghadapi pendekar pedang legendaris Ryuma dan
-                      mewarisi pedang kuatnya
-                    </h6>
+                    <p class="text-danger mb-1">2022</p>
+                    <h6 class="mb-0">saya sudah tidak pernah nyoba lagi</h6>
                   </div>
                   <div class="col-sm-6">
-                    <h5>New World</h5>
+                    <h5>Keempat</h5>
                     <hr class="text-green my-2" />
-                    <p class="text-green mb-1">2004 - 2010</p>
+                    <p class="text-danger mb-1">2023-2024</p>
                     <h6 class="mb-0">
-                      Zoro menghadapi lawan tangguh seperti anggota kru Yonko.
+                      saya mulai belajar lagi karena merasa penasaran
                     </h6>
                   </div>
                 </div>
@@ -327,16 +303,16 @@
               <div id="tab-2" class="tab-pane fade show p-0 bg-clear">
                 <div class="row gy-5 gx-4">
                   <div class="col-sm-6">
-                    <h5>Shimotsuki</h5>
+                    <h5>Frist study at</h5>
                     <hr class="text-green my-2" />
-                    <p class="text-green mb-1">1980 - 1995</p>
-                    <h6 class="mb-0">Swordman University</h6>
+                    <p class="text-danger mb-1">2024</p>
+                    <h6 class="mb-0">Belajar di SMK AK NUSA BANGSA</h6>
                   </div>
                   <div class="col-sm-6">
-                    <h5>Kuraigana Island</h5>
+                    <h5>visual Study at</h5>
                     <hr class="text-green my-2" />
-                    <p class="text-green mb-1">2004 - 2006</p>
-                    <h6 class="mb-0">Private University</h6>
+                    <p class="text-danger mb-1">2024-2026</p>
+                    <h6 class="mb-0">Youtube</h6>
                   </div>
                 </div>
               </div>
@@ -360,28 +336,28 @@
         </div>
         <div class="row g-5">
           <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <p class="mb-2">My office:</p>
-            <h3 class="fw-bold">123 Sea, Eddhead, New World</h3>
+            <p class="mb-2">My shcool:</p>
+            <h3 class="fw-bold">SMK AK Nusa Bangsa</h3>
             <hr class="w-100" />
             <p class="mb-2">Call me:</p>
-            <h3 class="fw-bold">+012 345 6789</h3>
+            <h3 class="fw-bold">+6282114028613</h3>
             <hr class="w-100" />
             <p class="mb-2">Mail me:</p>
-            <h3 class="fw-bold">resyaanggara@example.com</h3>
+            <h3 class="fw-bold">resyaanggara@gmail.com</h3>
             <hr class="w-100" />
             <p class="mb-2">Follow me:</p>
             <div class="d-flex pt-2">
               <a class="btn btn-square btn-green me-2" href=""
-                ><i class="fab fa-twitter"></i
+                ><i class="fab fa-youtube"></i
               ></a>
               <a class="btn btn-square btn-green me-2" href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a class="btn btn-square btn-green me-2" href=""
-                ><i class="fab fa-youtube"></i
+                ><i class="fab fa-instagram"></i
               ></a>
               <a class="btn btn-square btn-green me-2" href=""
-                ><i class="fab fa-linkedin-in"></i
+                ><i class="fab fa-github"></i
               ></a>
             </div>
           </div>
